--- a/tests/cldf_StructureDataset/sources.bib
+++ b/tests/cldf_StructureDataset/sources.bib
@@ -14,10 +14,8 @@
 @book{allsopp1996,
     editor = {Allsopp, Richard and Allsopp, Jeannette},
     publisher = {Oxford University Press},
-    year = {1996},
     ewave_url = {http://ewave-atlas.org/sources/allsopp1996},
-    address = {Oxford and New York},
-    title = {Dictionary of Caribbean English usage}
+    address = {Oxford and New York}
 }
 
 @incollection{alo2008,
